test-suite/golden-tests/int-overflow/exp.txt
=== S1: compile-time literal errors (negative tests) ===
bad-sign.loc:8:11: error:
Integer literal -12 overflows UInt8 (range 0 to 255)
  |
8 | badSign = -12
  |           ^

too-big.loc:8:12: error:
Integer literal 1000 overflows UInt8 (range 0 to 255)
  |
8 | tooLarge = 1000
  |            ^


=== S2: BigInt round-trip (pure morloc) ===
123456789012345678901234567890
123456789012345678901234567890

=== S3: list round-trips ===
[0,255]
OVERFLOW
[123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890,255,-123456789012345678901234567890]

=== S4: signed identity, positive boundary ===
127
OVERFLOW
32767
OVERFLOW
2147483647
OVERFLOW
9223372036854775807
OVERFLOW

=== S5: unsigned identity, positive boundary ===
255
OVERFLOW
65535
OVERFLOW
4294967295
OVERFLOW
18446744073709551615
OVERFLOW

=== S6: python doubling at fixed-width boundaries ===
200000000000000000000000000000
126
OVERFLOW
32766
OVERFLOW
2147483646
OVERFLOW
9223372036854775806
OVERFLOW
254
OVERFLOW
65534
OVERFLOW
4294967294
OVERFLOW
18446744073709551614
OVERFLOW

=== S7: cpp doubling at fixed-width boundaries ===
OVERFLOW
126
32766
2147483646
9223372036854775806
254
65534
4294967294
18446744073709551614

=== S8: r doubling at fixed-width boundaries ===
OVERFLOW
126
OVERFLOW
32766
OVERFLOW
2147483646
OVERFLOW
9007199254740992
OVERFLOW
254
OVERFLOW
65534
OVERFLOW
4294967294
OVERFLOW
9007199254740992
OVERFLOW

=== S9: signed identity, negative boundary ===
-128
OVERFLOW
-32768
OVERFLOW
-2147483648
OVERFLOW
-9223372036854775808
OVERFLOW

=== S10: signed doubling, negative-side underflow (Python and R) ===
-128
OVERFLOW
-128
OVERFLOW

=== S11: unsigned types reject negative input ===
OVERFLOW
OVERFLOW
OVERFLOW
OVERFLOW

=== S12: integer slot rejects float syntax ===
NOT_INTEGER
NOT_INTEGER
NOT_INTEGER
NOT_INTEGER
NOT_INTEGER

=== S13: zero and +/-1 sanity ===
0
0
1
-1
0
1
0
0

=== S14: BigInt boundary values (i64 / u64 / multi-limb transitions) ===
9223372036854775807
9223372036854775808
18446744073709551615
18446744073709551616
-9223372036854775808
-9223372036854775809

=== S15: R narrow numeric (round-trip identity through R) ===
127
-128
32767
-32768
2147483647
-2147483648
255
65535
4294967295
9007199254740992
OVERFLOW
OVERFLOW
OVERFLOW
OVERFLOW
OVERFLOW

=== S16: R NA rejection on integer pack ===
NA_REJECTED
